--- a/merge-sort/divide-step.html
+++ b/merge-sort/divide-step.html
@@ -6,7 +6,7 @@
   <script src="gif.worker.js"></script>
   <script src="gif.js"></script>
   
-  <script src="index.ts"></script>
+  <script src="divide-step.ts"></script>
 
   <style>
     html, body { margin:0; padding:0; overflow:hidden }
