remove duplicated code from divide-step

--- a/merge-sort/divide-step.html
+++ b/merge-sort/divide-step.html
@@ -6,6 +6,7 @@
   <script src="gif.worker.js"></script>
   <script src="gif.js"></script>
   
+  <script src="figure.ts"></script>
   <script src="divide-step.ts"></script>
 
   <style>
