extract tree related code to a new module tree.ts

--- a/merge-sort/full-algorithm.html
+++ b/merge-sort/full-algorithm.html
@@ -8,7 +8,7 @@
   
   <script src="figure.ts"></script>
   <script src="tree.ts"></script>
-  <script src="divide-step.ts"></script>
+  <script src="full-algorithm.ts"></script>
 
   <style>
     html, body { margin:0; padding:0; overflow:hidden }
