--- a/merge-sort/combine-step.html
+++ b/merge-sort/combine-step.html
@@ -7,6 +7,7 @@
   <script src="gif.js"></script>
   
   <script src="figure.ts"></script>
+  <script src="combine-step-timed-animation.ts"></script>
   <script src="combine-step.ts"></script>
 
   <style>
